--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.2",
     "express": "^4.18.1",
+    "mongoose": "^6.6.2",
     "puppeteer": "^18.0.5",
     "ts-node-dev": "^2.0.0",
     "tslib": "^2.4.0"
