--- a/tsconfig.json
+++ b/tsconfig.json
@@ -103,7 +103,7 @@
     "skipLibCheck": true                                 /* Skip type checking all .d.ts files. */
   },
   "files": [
-    "src/Bot.ts"
+    "src/index.ts"
   ],
   "include": [
       "./**/*.ts"
